--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -1,14 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3075abb8-53e3-4911-983f-837e28934853",
+   "metadata": {},
+   "source": [
+    "hello, can you see these changes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44ba304d-5975-4c52-b605-884f95f49beb",
+   "id": "f9133388-67b6-48a6-a73b-23ce22c9f004",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x"
-   ]
+   "source": []
   }
  ],
  "metadata": {
