adding titles/formatting

--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -5,7 +5,8 @@
    "id": "3075abb8-53e3-4911-983f-837e28934853",
    "metadata": {},
    "source": [
-    "hello, can you see these changes"
+    "### DSCI 100- Group Project : Predicting Type 2 Diabetes\n",
+    "Bhavya Mohan, Jason Jonathan, Sherin X, Neha Menon"
    ]
   },
   {
