--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -5,14 +5,38 @@
    "id": "3075abb8-53e3-4911-983f-837e28934853",
    "metadata": {},
    "source": [
-    "### DSCI 100- Group Project : Predicting Type 2 Diabetes\n",
+    "# DSCI 100-Group Project : Predicting Type 2 Diabetes\n",
     "Bhavya Mohan, Jason Jonathan, Sherin X, Neha Menon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "492a32f6-6853-4057-a843-f52bdb9c9355",
+   "metadata": {},
+   "source": [
+    "Introduction: \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5be01965-fd77-4930-90c3-293ba9c45fbc",
+   "metadata": {},
+   "source": [
+    "Methods/Results:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7191d99b-7bbd-469d-b461-69307cd0223b",
+   "metadata": {},
+   "source": [
+    "Discussion:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9133388-67b6-48a6-a73b-23ce22c9f004",
+   "id": "497d25e0-075b-46dd-a2b7-1329fed55fa1",
    "metadata": {},
    "outputs": [],
    "source": []
