Added comments to each code cell

--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "497d25e0-075b-46dd-a2b7-1329fed55fa1",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "868e2237-2388-45ca-b55f-be385bf26880",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "e6497dcf-e75b-4822-9b46-e51a49d2d7c0",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "67ead93c-167a-4c74-869a-5c553f9451fe",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "2cac5a62-b76f-4514-8633-fc0870fc385b",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "69239581-3cd5-4dc6-af66-201f5d893c9b",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "b519c27f-2860-410d-ba1c-b7eb75ae5af2",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "a947ec3d-89cb-4969-84b5-0cb7a299be40",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "b6aa44e5-7216-45db-9704-afd07c547286",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "32c75146-8ddb-4e07-b29d-20054a34a619",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "76a16cfb-c428-4f14-906c-42daa7125bfa",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "fd994ae6-6226-4b67-8bb8-b4477266d000",
    "metadata": {},
    "outputs": [
@@ -1584,6 +1584,7 @@
     }
    ],
    "source": [
+    "# Finding the accuracy for each value of k from 1 to 20\n",
     "accuracies <- knn_results |> \n",
     "                filter(.metric == \"accuracy\")\n",
     "accuracies\n",
@@ -1599,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "0ae7d055-68cd-4362-85ca-60e4d4954880",
    "metadata": {},
    "outputs": [
@@ -1620,6 +1621,7 @@
     }
    ],
    "source": [
+    "# Creating the best specification for our knn classifier model using k = 12\n",
     "knn_best_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 12) |>\n",
     "                    set_engine(\"kknn\") |>\n",
     "                    set_mode(\"classification\")\n",
@@ -1628,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "id": "c1cdb563-6142-4a1e-8abb-ef152bc460ff",
    "metadata": {},
    "outputs": [
@@ -1661,6 +1663,7 @@
     }
    ],
    "source": [
+    "# Creating the workflow for our knn classifier model\n",
     "diabetes_best_fit <- workflow() |>\n",
     "                add_recipe(diabetes_recipe) |>\n",
     "                add_model(knn_best_spec) |>\n",
@@ -1670,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "9a62209c-ff29-49ba-bd4f-d0920f1b2d2d",
    "metadata": {},
    "outputs": [
@@ -2018,6 +2021,7 @@
     }
    ],
    "source": [
+    "# Fitting our classifier model to the test data\n",
     "diabetes_test_predictions <- predict(diabetes_best_fit, diabetes_test) |> \n",
     "                                bind_cols(diabetes_test)\n",
     "diabetes_test_predictions"
@@ -2025,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "id": "b3a099f5-dfba-4090-b187-3255b39065d6",
    "metadata": {},
    "outputs": [
@@ -2071,6 +2075,7 @@
     }
    ],
    "source": [
+    "# Showing the accuracy of the predictions that our classifier model made on the test data\n",
     "diabetes_accuracy <- diabetes_test_predictions |>\n",
     "                        metrics(truth = CLASS, estimate = .pred_class) |> \n",
     "                        filter(.metric == \"accuracy\")\n",
@@ -2079,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "id": "506689ef-e317-4777-920f-ed736515a3e1",
    "metadata": {},
    "outputs": [
@@ -2098,6 +2103,7 @@
     }
    ],
    "source": [
+    "# Showing the confusion matrix of the predictions that our classifier made on the test data\n",
     "diabetes_confusion_matrix <- diabetes_test_predictions |> \n",
     "                                conf_mat(truth = CLASS, estimate = .pred_class)\n",
     "diabetes_confusion_matrix"
@@ -2105,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "e36902b8-158c-4e20-b0a5-c30773a26278",
    "metadata": {},
    "outputs": [
@@ -2126,6 +2132,7 @@
     }
    ],
    "source": [
+    "# Scatter plot of Hb1Ac concentration versus BMI concentration where background color indicates the decision of the classifier\n",
     "bmi_grid <- seq(min(scaled_diabetes$BMI), \n",
     "                max(scaled_diabetes$BMI), \n",
     "                length.out = 100)\n",
