added some discussion

--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -5,7 +5,7 @@
    "id": "3075abb8-53e3-4911-983f-837e28934853",
    "metadata": {},
    "source": [
-    "# DSCI 100-Group Project : Predicting Type 2 Diabetes\n",
+    "# DSCI 100-Group Project : Predicting Type 1 Diabetes\n",
     "Bhavya Mohan, Jason Jonathan, Sherin X, Neha Menon"
    ]
   },
@@ -1093,6 +1093,16 @@
     "**What future questions could this lead to?**\n",
     "\n",
     "Developing this model to predict diabetes, may lead to further classifications to predict type 1 vs type 2 diabetes. Additionally, the model may allow us to further understand how the classifiers BMI and HbA1c relate to diabetes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa2e7bbe-cf85-44a0-835f-4116209077c9",
+   "metadata": {},
+   "source": [
+    "**Summary of results**\n",
+    "\n",
+    "Developing this model to predict diabetes, may lead to further classifications to predict type 1 vs type 2 diabetes. Additionally, the model may allow us to further understand how the classifiers BMI and HbA1c relate to diabetes. The model we generated shows that high BMI and high HbA1c is correlated with individuals with diabetes."
    ]
   },
   {
