--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# DSCI 100-Group Project : Predicting Type 1 Diabetes\n",
-    "Bhavya Mohan, Jason Jonathan, Sherin X, Neha Menon"
+    "Bhavya Mohan, Jason Jonathan, Sherin Xierenayi, Neha Menon"
    ]
   },
   {
