--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -17,7 +17,9 @@
    "source": [
     "Introduction: \n",
     "\n",
-    "Diabetes is a common disease that is characterised by immune cells' targeting of beta-cells that produce insulin. Approximately 1.4 million people around the world receive the diabetic diagnosisEach year. Type 1 diabetes is a genetic disorder, however type 2 diabetes is brought on by environmental factors. As a result, it's critical to identify type 2 diabetes at an early stage in order to stop the condition from progressing. To help people assess their risk for developing diabetes, we intend to categorise the prevalence of diabetes based on characteristics that are simple to measure. We'll make use of a dataset created by Rajput et al., who gathered information on physical characteristics and diabetes, and the possible predictors include AGE, Urea, Cr, HbA1c, Chol, TG, HDL, LDL, VLDL. We want to answer the question that can we use the non-invasive diabetic measurements to predict whether an unknown case falls into categories of diabetic, non-diabetic or pre-diabetic diagnosis?"
+    "Diabetes is a common disease that is characterised by immune cells' targeting of beta-cells that produce insulin. Approximately 1.4 million people around the world receive the diabetic diagnosisEach year. Type 1 diabetes is a genetic disorder, however type 2 diabetes is brought on by environmental factors. As a result, it's critical to identify type 2 diabetes at an early stage in order to stop the condition from progressing. To help people assess their risk for developing diabetes, we intend to categorise the prevalence of diabetes based on characteristics that are simple to measure. We'll make use of a dataset created by Rajput et al., who gathered information on physical characteristics and diabetes, and the possible predictors include AGE, Urea, Cr, HbA1c, Chol, TG, HDL, LDL, VLDL. We want to answer the question that can we use the non-invasive diabetic measurements to predict whether an unknown case falls into categories of diabetic, non-diabetic or pre-diabetic diagnosis?\n",
+    "\n",
+    "We choose Hb1Ac vs BMI as our predictors, as literature concluded that they are diabetic indicators and are strongly correlated with diagnosis. A hemoglobin A1C (HbA1C)1 test is a blood test that shows what your average blood sugar (glucose) level was over the past two to three months. The values commonly used for diagnosis is that below 5.7% indicates normal, between 5.7% and 6.4% indicates pre-diabetic and 6.5% or higher indicates diabetic. Body Mass Index (BMI)2 is a person’s weight in kilograms divided by the square of height in meters. According to the CDC, a BMI between 18.5  and 24.9 indicates Healthy Weight. "
    ]
   },
   {
@@ -2254,7 +2256,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "fiugre7. "
+   ]
   }
  ],
  "metadata": {
