finished comments (markdown) to the code

--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -60,6 +60,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4bf84caf",
+   "metadata": {},
+   "source": [
+    "We chose a dataset that was utilized in a previous scientific study about predictors of diabetes done by Rajput et. al in 2022. We downloaded the dataset as a .csv file from Kaggle which contains data about previous by Rajput et. al. to our remote repository on GitHub. We then loaded the dataset from GitHub to our Jupyter notebook. The CLASS column contains the diagnoses of whether a patient is diabetic (Y), pre-diabetic (P), or non-diabetic (N). Since we will be working with the CLASS column as a categorical statistical variable, we used the as_factor function to mutate the CLASS column from a character variable to a factor variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "868e2237-2388-45ca-b55f-be385bf26880",
@@ -378,6 +387,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3c490217",
+   "metadata": {},
+   "source": [
+    "To get an idea of the distribution of classes in our dataset, we used the group_by, summarize, and n functions to find the number and percentage of observations in each CLASS. The group_by function groups the observations by their respective CLASS and the n function used within the summarize function counts the number of observations in each CLASS group. We then calculate the percentage of observations in each CLASS by dividing by the total number of observations. We have 844 (84.4%) diabetic, 53 (5.3%) pre-diabetic, and 103 (10.3%) non-diabetic observations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "e6497dcf-e75b-4822-9b46-e51a49d2d7c0",
@@ -448,6 +466,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a61fedaf",
+   "metadata": {},
+   "source": [
+    "We decided to compute the mean values for each of the numerical predictors in our dataset. We used the summarize function paired with the across function to specify the columns that we want to perform the statistical summary on (AGE:BMI) and then used the mean function to calculate the mean values for each of the columns specified. We noted that the average age of the sample is at 53.5, the mean BMI value is 29.58 and the average HbA1c value is 8.28, and by comparing variable values to the normal range, we concluded that the sample is overweight and diabetic on average. (see normal values from literatures in Introduction section)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "67ead93c-167a-4c74-869a-5c553f9451fe",
@@ -508,6 +535,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b03580ad",
+   "metadata": {},
+   "source": [
+    "We also computed the number of rows that have missing data within them to make sure that all of the observations that we use for our modelling is reliable and uniform. We confirmed that none of the observations in our dataset have any missing data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "2cac5a62-b76f-4514-8633-fc0870fc385b",
@@ -542,6 +578,15 @@
     "  is.na()|>\n",
     "    sum()\n",
     "number_empty"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "01ba6dd3",
+   "metadata": {},
+   "source": [
+    "Since our predictors have different scales, we scaled and centered all of the numerical predictors in our dataset. We used the recipe function to specify that the CLASS variable will be the target and all of the numerical variables are the predictors. We prepped the recipe with the step_scale and step_center functions, specifying to apply these functions to all predictors. We then baked the original, unscaled diabetes dataset with the recipe we created and stored the new, scaled dataframe as scaled_diabetes."
    ]
   },
   {
@@ -934,6 +979,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d418b47c",
+   "metadata": {},
+   "source": [
+    "To choose the most appropriate predictor variables to use for our modelling (see in discussion), we created scatter plots to visualize the relationships between different predictor variables namely BMI vs. HbA1c, BMI vs. Age, HDL vs. Age, Cholesterol vs. Urea, and Age vs. Creatine. We constructed each scatter plot using the ggplot function paired with geom_point. We made sure that each plot is readable and understandable by including explanatory labels to each axes, a figure legend with descriptive labels, and a descriptive title. We also colored the data points in each class differently from one another, using the scale_color_manual function, to demonstrate the distribution. From the plots we generated, we observe that only the BMI vs. HbA1c plot gave a decent distribution. As a result, we decided to utilize the BMI and HbA1c variables as predictors for our classification model (more in discussion)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "b519c27f-2860-410d-ba1c-b7eb75ae5af2",
@@ -1139,6 +1193,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d2ffa4c4",
+   "metadata": {},
+   "source": [
+    "In order to evaluate our classifier's accuracy on unseen data, we need to split our dataset into training and testing sets using the initial_split function. To ensure that the split is done randomly but is also reproducible, we set a random seed value with the set.seed function. We specified prop to be 0.75 so that 75% of our original data ends up in the training set and 25% of our original data ends up in the testing set. We set the strata argument to the categorical label variable, CLASS, to ensure that the training and testing subsets contain the right proportions of each category of observation. We then used the training and testing functions to extract the training and testing datasets into two separate dataframes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "a947ec3d-89cb-4969-84b5-0cb7a299be40",
@@ -1191,6 +1254,15 @@
     "diabetes_test <- testing(diabetes_split)\n",
     "glimpse(diabetes_train)\n",
     "glimpse(diabetes_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4607a18f",
+   "metadata": {},
+   "source": [
+    "To make sure that our class proportions were roughly preserved when the data was split, we used the group_by, summarize, and n functions to find the number and percentage of observations in each CLASS like we did earlier. We can see that about 84.6% of the training data are diabetic observations, 5.3% are pre-diabetic observations, and 10.0% are non-diabetic observations which tells us the class proportions were successfully preserved."
    ]
   },
   {
@@ -1263,6 +1335,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "963bfcc7",
+   "metadata": {},
+   "source": [
+    "We created a new recipe with only our chosen variables, BMI and HbA1c, as the predictor variables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "32c75146-8ddb-4e07-b29d-20054a34a619",
@@ -1277,6 +1358,17 @@
     "diabetes_recipe <- recipe(CLASS ~ BMI + HbA1c, data = diabetes_train) |>\n",
     "                    step_scale(all_predictors()) |>\n",
     "                    step_center(all_predictors())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a9b60a78",
+   "metadata": {},
+   "source": [
+    "To choose the best value of K for our classifier model, we use cross-validation to calculate an accuracy for each value of K in a reasonable range (1-20) and then pick the value of K that gives us the best accuracy. To do this, we created a model specification and specified that the neighbors argument is going to be tuned using tune(). We then created the k_vals dataframe with a neighbors variable containing values from 1 to 20 (stepping by 1) using the seq function. To perform a 10-fold cross-validation, we use the vfold_cv function with v = 10 to specify that we want to split the diabetes_train dataset into 10 folds. We specify the strata argument to CLASS to ensure that the training and validation subsets contain the right proportions of each category of observation.\n",
+    "\n",
+    "Next, we created our data analysis workflow with the tune_grid function instead of the fit or fit_resamples functions to fit the model for each value of K. We specified diabetes_recipe which we created earlier as our recipe and knn_tune as our model specification for the workflow. We pass the 10-fold cross-validation model we created before to the resamples argument and the k_vals dataframe to the grid argument of the tune_grid function. We then use the collect_metrics function to aggregate the mean and standard error of the classifier's validation accuracy across the folds."
    ]
   },
   {
@@ -1505,6 +1597,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1a5bdd66",
+   "metadata": {},
+   "source": [
+    "We plotted the accuracy of the classifier model against the K value to find the K value that will generate the highest accuracy. It was found that K = 12 is the best. However, the relative accuracy between all of the K values from 1 to 20 was similar with all of them being quite high."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "fd994ae6-6226-4b67-8bb8-b4477266d000",
@@ -1662,6 +1763,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6352722d",
+   "metadata": {},
+   "source": [
+    "We created a new model specification using the value of K =12 as it was found to generate the highest accuracy for our particular classifier model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "0ae7d055-68cd-4362-85ca-60e4d4954880",
@@ -1693,6 +1803,15 @@
     "                    set_engine(\"kknn\") |>\n",
     "                    set_mode(\"classification\")\n",
     "knn_best_spec"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "35278cff",
+   "metadata": {},
+   "source": [
+    "We created a new data analysis workflow with the same recipe (diabetes_recipe) that we created earlier, but this time using the new model specification that we created with K = 12. We then fitted the workflow to the diabetes_train dataset to train our classifier model."
    ]
   },
   {
@@ -1740,6 +1859,15 @@
     "                add_model(knn_best_spec) |>\n",
     "                fit(data = diabetes_train)\n",
     "diabetes_best_fit"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ab740773",
+   "metadata": {},
+   "source": [
+    "We then passed the new data analysis workflow to the predict function to allow our classifier to predict the CLASS of the observations in the diabetes_test dataset. We then binded the predictions that our classifier made to the diabetes_test dataset itself and stored it as a new variable called diabetes_predictions."
    ]
   },
   {
@@ -2103,6 +2231,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "07f2e9ed",
+   "metadata": {},
+   "source": [
+    "To assess the accuracy of our classifier model, we use the metrics function to get the statistics about the quality of our model, specifying the truth argument as CLASS and the estimate argument as .pred_class. We filtered the dataframe to include only the accuracy row since the accuracy metric is the only one we are interested in. An accuracy of 95% is observed which means that our model is well designed and relatively accurate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "b3a099f5-dfba-4090-b187-3255b39065d6",
@@ -2162,6 +2299,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3662a123",
+   "metadata": {},
+   "source": [
+    "We also generated a confusion matrix, a table of predicted labels and correct labels, of the predictions that our classifier made on the testing set using the conf_mat function. The confusion matrix shows 200 observations were correctly predicted as diabetic, 12 were correctly predicted as pre-diabetic, and 27 were correctly predicted as non-diabetic. Therefore the classifier labeled 200 + 12 + 27 = 239 observations correctly. It also shows that the classifier made some mistakes; in particular, it classified 9 observations as non-diabetic when they were truly diabetic, 1 observation as non-diabetic when it was truly pre-diabetic, 1 observation as pre-diabetic when it was truly diabetic, and 1 observation as diabetic when it was truly non-diabetic.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "506689ef-e317-4777-920f-ed736515a3e1",
@@ -2190,6 +2336,15 @@
     "diabetes_confusion_matrix <- diabetes_test_predictions |> \n",
     "                                conf_mat(truth = CLASS, estimate = .pred_class)\n",
     "diabetes_confusion_matrix"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "693141ff",
+   "metadata": {},
+   "source": [
+    "To visualize the distibution of the predicted model, a kernel graph was made versus the training dataset. The model shows that regions of the plot where the classifiers are confined."
    ]
   },
   {
