--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -1194,16 +1194,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "948e37c4-6319-440e-b3e6-f478b9c12160",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "031272cb",
+   "metadata": {},
+   "source": [
+    "figure7: Scatter plot of BMI versus Hb1Ac where background color indicates the decision of the classifier."
+   ]
   }
  ],
  "metadata": {
