--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -929,6 +929,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6548e8e0",
+   "metadata": {},
+   "source": [
+    "Figure 6: Plot of estimated accuracy versus the number of neighbors."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6352722d",
    "metadata": {},
