--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -189,6 +189,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bf094082",
+   "metadata": {},
+   "source": [
+    "Table1 : The number and percentage of each CLASS within the whole data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a61fedaf",
    "metadata": {},
@@ -254,6 +263,15 @@
     "mean_predictors <- diabetes|>\n",
     "summarize(across(AGE:BMI, mean))\n",
     "mean_predictors"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9bc7275c",
+   "metadata": {},
+   "source": [
+    "Table2 : The average value for each numerical predictors"
    ]
   },
   {
