--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -10,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "492a32f6-6853-4057-a843-f52bdb9c9355",
    "metadata": {},
@@ -22,7 +23,7 @@
     "\n",
     "The question we are trying to answer is whether we can use previously diagnosed patients' medical attributes related to diabetes to predict whether a future patient with an unknown diagnosis falls into one of the three diabetes categories: 1. Diabetic, 2. Pre-diabetic, or 3. Non-diabetic.\n",
     "\n",
-    "We choose Hb1Ac vs BMI as our predictors, as literature concluded that they are diabetic indicators and are strongly correlated with diagnosis. A hemoglobin A1C (HbA1C)1 test is a blood test that shows what your average blood sugar (glucose) level was over the past two to three months. The values commonly used for diagnosis is that below 5.7% indicates normal, between 5.7% and 6.4% indicates pre-diabetic and 6.5% or higher indicates diabetic. Body Mass Index (BMI)2 is a person’s weight in kilograms divided by the square of height in meters. According to the CDC, a BMI between 18.5  and 24.9 indicates Healthy Weight. "
+    " A hemoglobin A1C (HbA1C)[1] test is a blood test that shows what your average blood sugar (glucose) level was over the past two to three months. The values commonly used for diagnosis is that below 5.7% indicates normal, between 5.7% and 6.4% indicates pre-diabetic and 6.5% or higher indicates diabetic. Body Mass Index (BMI)[2] is a person’s weight in kilograms divided by the square of height in meters. According to the CDC, a BMI between 18.5  and 24.9 indicates Healthy Weight. "
    ]
   },
   {
