--- a/group project report_V1.ipynb
+++ b/group project report_V1.ipynb
@@ -10,7 +10,14 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8345e4b2-8ee1-411d-978b-264684e3772d",
+   "metadata": {},
+   "source": [
+    "### Can use previously diagnosed patients' medical attributes related to diabetes to predict whether a future patient with an unknown diagnosis falls into one of the three diabetes categories: 1. Diabetic, 2. Pre-diabetic, or 3. Non-diabetic?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "492a32f6-6853-4057-a843-f52bdb9c9355",
    "metadata": {},
@@ -1231,17 +1238,17 @@
    "id": "1a529bf3-4f52-4955-b189-2cbcfe9cdb16",
    "metadata": {},
    "source": [
-    "Considering our original question was looking at if HbA1c and BMI measurements were good predictors of a Type 1 diabetes diagnosis, our designed model showed that these predictors do a good job at predicting diabetes. The accuracy of our model was 95% when used on our testing data showing that our model was accurate when predicting the class value. In addition, the confusion matrix showed that only 12 predictions were wrong, among 239 accurate predictions. Our analysis showed that 12 neighbors allowed the most accurate predictions to be made though the differences among the accuracies for similar values was not significantly different. \n",
+    "Considering our original question was looking at if HbA1c and BMI measurements were good predictors of a type 2 diabetes diagnosis, our designed model showed that these predictors do a good job at predicting diabetes. The accuracy of our model was 95% when used on our testing data showing that our model was accurate when predicting the class value. In addition, the confusion matrix showed that only 12 predictions were wrong, among 239 accurate predictions. Our analysis showed that 12 neighbors allowed the most accurate predictions to be made though the differences among the accuracies for similar values was not significantly different. \n",
     "\n",
-    "Our dataset did contain a higher proportion of individuals with diabetes in comparison to patients classified as not diabetic or pre-diabetic. This is not seen in our analysis as only 1 value was predicted diabetic when it was not diabetic. Our results showed that higher BMI's and HBa1c were correlated with individuals that had Type 2 diabetes. Individuals presenting low BMI and HBa1c were most likely to not have diabetes, with a few samples in that range being pre-diabetic individuals. \n",
+    "Our dataset did contain a higher proportion of individuals with diabetes in comparison to patients classified as not diabetic or pre-diabetic. This is not seen in our analysis as only 1 value was predicted diabetic when it was not diabetic. Our results showed that higher BMI's and HbA1c were correlated with individuals that had type 2 diabetes. Individuals presenting low BMI and HbA1c were most likely to not have diabetes, with a few samples in that range being pre-diabetic individuals. \n",
     "\n",
     "Our graph showing Hb1Ac vs BMI also shows that a high BMI is associated with diabetic individuals whereas a high Hb1Ac is not highly correlated with diabetic patients. Moderate levels of Hb1Ac are shown to be mainly associated with pre-diabetic individuals, while low levels almost always belong to patients without diabetes. \n",
     "\n",
     "Overall our model shows that our predictions are highly accurate and that BMI and Hb1Ac are good explanatory variables to classify individuals as diabetic, pre, and non-diabetic. These two predictors were chosen since when initially plotted, a strong, positive relationship was seen and the different categories well organized among the distribution. The results were expected due to this strong relationship, and the accuracy of our model was not surprising. \n",
     "\n",
-    "These findings impact the factors necessary to diagnose someone with diabetes, and could possibly simplify the process. Considering the global prevalence of type 2 diabetes especially within the United States, ensuring that individuals are diagnosed early to allow them to receive treatment and prevent the progression of the condition is important. Since BMI and Hb1Ac served as accurate predictor variables to predict diabetes, it is possible that they can be used to supplement current diagnostic tests. Currently, blood sugar is the main measurement used to diagnose type 2 diabetes but considering there are other variables strongly related, it provides more opportunity to enhance testing. In addition, blood tests are somewhat invasive and considering that BMI is a strong predictor of diabetes, easy to calculate and less invasive, it could help to identify individuals at risk at a larger scale level. \n",
+    "These findings impact the factors necessary to diagnose someone with type 2 diabetes, and could possibly simplify the process. Considering the global prevalence of type 2 diabetes especially within the United States, ensuring that individuals are diagnosed early to allow them to receive treatment and prevent the progression of the condition is important. Since BMI and Hb1Ac served as accurate predictor variables to predict diabetes, it is possible that they can be used to supplement current diagnostic tests. Currently, blood sugar is the main measurement used to diagnose type 2 diabetes but considering there are other variables strongly related, it provides more opportunity to enhance testing. In addition, blood tests are somewhat invasive and considering that BMI is a strong predictor of diabetes, easy to calculate and less invasive, it could help to identify individuals at risk at a larger scale level. \n",
     "\n",
-    "This analysis poses the question if Type I diabetes follows the same trend as the one observed within this model. Type I diabetes is a genetic condition while type 2 diabetes is mainly lifestyle-related therefore it might not present the same accuracy with these explanatory variables, though it would be interesting to compare the accuracies of this model with Type I diabetes data. In addtion, it would be interesting to see if BMI and another non-invasive variable have a high accuracy as that could eliminate the need for invasive testing such as blood tests. Blood tests would need to be performed to confirm the initial diagnosis however an initial test based off of non-invasive measurements could eliminate individuals from needing to access to and using further testing services.\n"
+    "This analysis poses the question if type I diabetes follows the same trend as the one observed within this model. Type I diabetes is a genetic condition while type 2 diabetes is mainly lifestyle-related therefore it might not present the same accuracy with these explanatory variables, though it would be interesting to compare the accuracies of this model with type I diabetes data. In addition, it would be interesting to see if BMI and another non-invasive variable have a high accuracy as that could eliminate the need for invasive testing such as blood tests. Blood tests would need to be performed to confirm the initial diagnosis however an initial test based off of non-invasive measurements could eliminate individuals from needing to access to and using further testing services.\n"
    ]
   },
   {
@@ -1253,7 +1260,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "83682756",
    "metadata": {},
